docs(plan): add Task 11b — upgrade --add-modules (no CLI path added a module to an initialized backend)
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>